# 4M26-rigidphysics

./: .flake8  .gitignore  LICENSE  README.md  create_solids.py  debug-flat.py  debug.py  perf.txt  pyproject.toml
configs/: 01_sphere.json  02_sphere_cube.json
lecture/: .gitignore  apriori.py  collide.py  contacts.py  convex_hull.py  floating_point.py  gjk_images.py  line_profiler_example.py  md_animation.py  pseudocode.tex  quadtree.py  sh_images.py  skew_lines.py  video_writer.py
src/rigidphysics/: __init__.py  bodies.py  collisions.py  config.py  contacts.py  detection.py  engine.py  geometry.py  maths.py  physics.py  primitives.py  simulation.py
src/rigidphysics/flat/: __init__.py  collisions.py  detection.py  engine.py  physics.py  simulation.py
src/rigidphysics/shaders/: solids.frag  solids.vert  wireframe.frag  wireframe.vert
test/: test_collide.py  test_contacts.py  test_detection.py  test_geometry.py  test_quadtree.py  test_quaternions.py  test_timing.py
